# CEPS

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/SphericalUniformization/: CMakeLists.txt
src/SphericalUniformization/polyscope/: SurfaceProjectiveSphericalParameterizationQuantity.cpp  SurfaceProjectiveSphericalParameterizationQuantity.h
